--- a/T2D.ipynb
+++ b/T2D.ipynb
@@ -13,12 +13,12 @@
    "id": "86dc6112-1e80-4de3-92d9-a0b39a21cf8c",
    "metadata": {},
    "source": [
-    "### https://docs.google.com/document/d/1Iv-LkPUQRKj3V3kI_Ax2DWC5QKs1xKsyeiAb06XNkP4/edit¶\n",
-    "### 1) бактерии, ассоциированные с ожирением из базы данных chocoplan\n",
-    "### 2) общее количество последовательностей для выбранной бактерии\n",
-    "### 3) фильтрация геномных последовательностей на основе их длины (от 100 до 150 нуклеотидов)\n",
-    "### 4) количество отфильтрованных последовательностей\n",
-    "### 5) проверка уникальности в BLAST и вывод уникальных последовательностей"
+    "#### https://docs.google.com/document/d/1Iv-LkPUQRKj3V3kI_Ax2DWC5QKs1xKsyeiAb06XNkP4/edit¶\n",
+    "#### 1) бактерии, ассоциированные с ожирением из базы данных chocoplan\n",
+    "#### 2) общее количество последовательностей для выбранной бактерии\n",
+    "#### 3) фильтрация геномных последовательностей на основе их длины (от 100 до 150 нуклеотидов)\n",
+    "#### 4) количество отфильтрованных последовательностей\n",
+    "#### 5) проверка уникальности в BLAST и вывод уникальных последовательностей"
    ]
   },
   {
