--- a/CD.ipynb
+++ b/CD.ipynb
@@ -83,12 +83,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1eee9539-dacd-435d-86be-330d6a26cd42",
+   "cell_type": "markdown",
+   "id": "2ff405da-e8c8-4c6b-93de-0784ea6841c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Bacteroides fragilis (информация в UC)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "7ed03529-7b7c-443b-b3ac-d9e188930624",
+   "metadata": {},
+   "source": [
+    "Mycobacterium avium subspecies paratuberculosis (MAP) (информация в UC)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "8b2d4ee0-1bb9-4c10-9b0d-284ac7246f94",
+   "metadata": {},
+   "source": [
+    "Fusobacterium varium (информация в UC)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "bb103072-3df4-46e8-b99f-6db785b20fe2",
+   "metadata": {},
+   "source": [
+    "Adherent-Invasive Escherichia coli (AIEC) (информация в UC)"
+   ]
   }
  ],
  "metadata": {
