--- a/Depression.ipynb
+++ b/Depression.ipynb
@@ -5,7 +5,7 @@
    "id": "e07e070a-aaea-464d-9d97-734fc5bcbe74",
    "metadata": {},
    "source": [
-    "Enterococcus faecium  большой для бласт "
+    "Enterococcus faecium слишком большой для бласт "
    ]
   },
   {
